package lapr4.cafeteria.dish_management.domain;

public enum DishType {
    MEAT, FISH, VEGETARIAN;
}
